--- a/.github/workflows/foodgram_workflow.yml
+++ b/.github/workflows/foodgram_workflow.yml
@@ -87,9 +87,9 @@ jobs:
           passphrase: ${{ secrets.PASSPHRASE }}
           script: |
             sudo docker-compose stop
-            sudo docker-compose rm backend
+            sudo docker-compose rm -f backend
             sudo docker-compose pull backend
-            sudo docker-compose rm frontend
+            sudo docker-compose rm -f frontend
             sudo docker-compose pull frontend
        
             touch .env
@@ -101,7 +101,7 @@ jobs:
             echo DB_HOST=${{ secrets.DB_HOST }} >> .env
             echo DB_PORT=${{ secrets.DB_PORT }} >> .env
             sudo docker-compose up -d --build
-            
+
   send_message:
     name: Sending Telegram message
     runs-on: ubuntu-latest
